--- a/MeetUp/app/src/main/res/values/strings.xml
+++ b/MeetUp/app/src/main/res/values/strings.xml
@@ -5,4 +5,16 @@
     <string name="action_settings">Settings</string>
 
     <string name="google_map_key">AIzaSyAOfTIWpsgs-l0zflk0MmL2IwvIyJLZv5E</string>
+    <string name="title_activity_map_nav">MapNavActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
+    <string name="home_second">Home Second</string>
 </resources>
