--- a/MeetUp/app/src/main/res/values/strings.xml
+++ b/MeetUp/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="places">Miesta</string>
     <string name="friends">Priatelia</string>
     <string name="qr">QR kod</string>
+    <string name="pr">Prihlásenie</string>
     <string name="action_settings">Settings</string>
 
     <string name="google_map_key">AIzaSyAOfTIWpsgs-l0zflk0MmL2IwvIyJLZv5E</string>
